--- a/style.css
+++ b/style.css
@@ -3,19 +3,14 @@ body{
 }
 
 
-
-
 .titulo-principal {
-	padding-left: 20px;
+	padding-left: 35px;
 	text-align: center;
 	font-size: 50px;
 	color: #33AB5F;
 	text-transform: uppercase;
 	font: monospace;
-
-	
 }
-
 
 .principal{
 	padding-left: 60px;
@@ -24,16 +19,12 @@ body{
 	color: #191970;
 	margin: 0 0 0 50px;
 	padding: 50px;
-	
 }
-
-
 
 hr{
 	width: 1300px;
 	height: 1px;
 	border-radius: 40%;
-
 }
 
 .solo{
@@ -49,9 +40,9 @@ hr{
   vertical-align: top;
   padding: 20px 20px;
   margin: 0 0 0 15px;
-  
-
+	
 }
+
 
 ul {
 	display: inline-block;
@@ -80,7 +71,7 @@ ul {
   padding: 5px 10px;
   margin: 0 2.5%;
   color: #3333FF;
- 
+
 }
 
 #alimentacao{
@@ -91,6 +82,7 @@ ul {
 	vertical-align: top;
 	margin: 0 2.5%;
 	border-radius: 5%;
+	border: 3px solid #C78C19;
 
 }
 
@@ -98,6 +90,7 @@ ul {
 	vertical-align: top;
 	margin: 0 2.5%;
 	border-radius: 5%;
+	border: 3px solid #C78C19;
 }
 
 #recursos{
@@ -106,20 +99,19 @@ ul {
 	height: inherit;
 	vertical-align: top;
 	border-radius: 5%;
-	
-
+	border: 3px solid #C78C19;
 }
 
 footer{
-	background-color: #CCCCCC;
-	color: #FFFFFF;
 	text-align: center;
+	background: url("OIP.jpg");
 	font-size: 25px;
 }
 
 .problematizacao{
 	text-align: center;
-	font-size: 25px;
+	font-size: 35px;
 	margin: 10px 0;
+	color: #33AB5F;
 
 }
